prueba commit nueva laptop

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p class="producto__precio">$25</p>
                     </div>
                 </a>
-            </div>  <!--.producto-->
+            </div>  <!--.productoo-->
             <div class="producto">
                 <a href="producto.html">
                     <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
