--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,8 @@
   </nav>
 
   <main class="contenedor">
-    <h1>Contacto</h1>
+    <h1>Can te amoooo</h1>
+    <h3>Mucho</h3>
     <form class="formulario">
       <input class="formulario__campo" type="text" placeholder="Nombre" required />
       <input class="formulario__campo" type="email" placeholder="Correo" required />
