Actualizacion_index_fotos

--- a/contacto.html
+++ b/contacto.html
@@ -20,11 +20,12 @@
     <a class="navegacion__enlace" href="index.html">Tienda</a>
     <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace navegacion__enlace--activo" href="contacto.html">Contacto</a>
+    <a class="navegacion__enlace" href="carrito.html">Carrito</a>
   </nav>
 
   <main class="contenedor">
-    <h1>Can te amoooo</h1>
-    <h3>Mucho</h3>
+    <h1>Contacto</h1>
+    <p>Si tenés alguna consulta sobre los productos o el proyecto, podés escribirme usando este formulario.</p>
     <form class="formulario">
       <input class="formulario__campo" type="text" placeholder="Nombre" required />
       <input class="formulario__campo" type="email" placeholder="Correo" required />
@@ -40,7 +41,7 @@
   </main>
 
   <footer class="footer">
-    <p class="footer__texto">Dominguez Facundo Todos los Derechos Reservados.</p>
+    <p class="footer__texto">Facundo Domínguez © 2025. Todos los derechos reservados.</p>
   </footer>
 
 </body>
