--- a/nosotros.html
+++ b/nosotros.html
@@ -20,23 +20,24 @@
     <a class="navegacion__enlace" href="index.html">Tienda</a>
     <a class="navegacion__enlace navegacion__enlace--activo" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+    <a class="navegacion__enlace" href="carrito.html">Carrito</a>
   </nav>
 
   <main class="contenedor nosotros">
-    <h1>Sobre Nosotros</h1>
+    <h1>Sobre mí</h1>
     <div class="nosotros">
       <div class="nosotros__imagen">
-        <img src="img/nosotros.jpg" alt="Imagen nosotros" />
+        <img src="img/nosotros.jpg" alt="Imagen ilustrativa del proyecto" />
       </div>
       <div class="nosotros__texto">
-        <p>Somos una tienda apasionada por el desarrollo web. Nuestro catálogo está inspirado en las tecnologías que usamos día a día: JavaScript, React, Vue, y más.</p>
-        <p>Apoyamos la educación tecnológica y la creatividad. Gracias por formar parte de nuestra comunidad.</p>
+        <p>Mi nombre es Facundo Domínguez y este sitio es un proyecto académico creado para la materia Aplicaciones Web Cliente. Combiné mi interés por el desarrollo web con el diseño de indumentaria temática.</p>
+        <p>El sitio fue desarrollado con HTML semántico, CSS moderno y JavaScript puro. Toda la lógica del carrito está basada en localStorage y manipulación del DOM.</p>
       </div>
     </div>
   </main>
 
   <footer class="footer">
-    <p class="footer__texto">Dominguez Facundo Todos los Derechos Reservados.</p>
+    <p class="footer__texto">Facundo Domínguez © 2025. Todos los derechos reservados.</p>
   </footer>
 
 </body>
