--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </header>
 
   <nav class="navegacion">
-    <a class="navegacion__enlace" href="index.html">Tienda</a>
-    <a class="navegacion__enlace navegacion__enlace--activo" href="nosotros.html">Nosotros</a>
+    <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+    <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+    <a class="navegacion__enlace" href="carrito.html">Carrito</a>
   </nav>
 
     <main class="contenedor">
