--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
     <a class="navegacion__enlace" href="carrito.html">Carrito</a>
+    <a class="navegacion__enlace" href="carrito.html">
+        Carrito <span id="contador">(0)</span>
+    </a>
   </nav>
 
     <main class="contenedor">
