--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
     <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-    <a class="navegacion__enlace" href="carrito.html">Carrito</a>
     <a class="navegacion__enlace" href="carrito.html">
         Carrito <span id="contador">(0)</span>
     </a>
@@ -38,6 +37,8 @@
     </footer>
     
     <script src="script.js"></script>
+    <script src="carrito.js"></script>
+
 
 </body>
 </html>
