--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,9 @@
     <a class="navegacion__enlace" href="index.html">Tienda</a>
     <a class="navegacion__enlace navegacion__enlace--activo" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-    <a class="navegacion__enlace" href="carrito.html">Carrito</a>
+    <a class="navegacion__enlace" href="carrito.html">
+        Carrito <span id="contador">(0)</span>
+    </a>
   </nav>
 
   <main class="contenedor nosotros">
@@ -39,6 +41,9 @@
   <footer class="footer">
     <p class="footer__texto">Facundo Domínguez © 2025. Todos los derechos reservados.</p>
   </footer>
+
+  <script src="carrito.js"></script>
+
 
 </body>
 </html>
