--- a/producto.html
+++ b/producto.html
@@ -20,7 +20,9 @@
     <a class="navegacion__enlace" href="index.html">Tienda</a>
     <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-    <a class="navegacion__enlace" href="carrito.html">Carrito</a>
+    <a class="navegacion__enlace" href="carrito.html">
+        Carrito <span id="contador">(0)</span>
+    </a>
   </nav>
 
   <main class="contenedor">
@@ -65,6 +67,9 @@
       alert(`${nombre} fue agregado al carrito.`)
     })
   </script>
+
+  <script src="carrito.js"></script>
+
 
 </body>
 </html>
