--- a/nosotros.html
+++ b/nosotros.html
@@ -26,17 +26,16 @@
   </nav>
 
   <main class="contenedor nosotros">
-    <h1>Sobre mí</h1>
-    <div class="nosotros">
-      <div class="nosotros__imagen">
-        <img src="img/nosotros.jpg" alt="Imagen ilustrativa del proyecto" />
-      </div>
-      <div class="nosotros__texto">
-        <p>Mi nombre es Facundo Domínguez y este sitio es un proyecto académico creado para la materia Aplicaciones Web Cliente. Combiné mi interés por el desarrollo web con el diseño de indumentaria temática.</p>
-        <p>El sitio fue desarrollado con HTML semántico, CSS moderno y JavaScript puro. Toda la lógica del carrito está basada en localStorage y manipulación del DOM.</p>
-      </div>
-    </div>
-  </main>
+  <div class="nosotros__contenido">
+    <h2 class="nosotros__titulo">Sobre mí</h2>
+    <p>Mi nombre es Facundo Domínguez y este sitio es un proyecto académico creado para la materia Aplicaciones Web Cliente.</p>
+    <p>Combiné mi interés por el desarrollo web con el diseño de indumentaria temática.</p>
+    <p>El sitio fue desarrollado con HTML semántico, CSS moderno y JavaScript.</p>
+  </div>
+
+  <img class="nosotros__imagen" src="img/4.jpg" alt="Modelo con remera Redux">
+</main>
+
 
   <footer class="footer">
     <p class="footer__texto">Facundo Domínguez © 2025. Todos los derechos reservados.</p>
