--- a/carrito.html
+++ b/carrito.html
@@ -30,7 +30,7 @@
 
     <div id="carrito-lista" class="grid"></div>
 
-    <div id="carrito-total" style="margin-top: 2rem; font-size: 1.8rem; text-align: right;"></div>
+    <div id="carrito-total" style="margin-top: 2rem; font-size: 2.4rem; text-align: right;"></div>
 
     <button id="vaciar-carrito" class="producto__boton" style="margin-top: 2rem;">
       Vaciar carrito
@@ -48,7 +48,7 @@
       const total = document.getElementById('carrito-total')
       const btnVaciar = document.getElementById('vaciar-carrito')
 
-      const carrito = JSON.parse(localStorage.getItem('carrito')) || []
+      let carrito = JSON.parse(localStorage.getItem('carrito')) || []
 
       if (carrito.length === 0) {
         lista.innerHTML = '<p>No hay productos en el carrito.</p>'
@@ -58,7 +58,7 @@
 
       let totalCompra = 0
 
-      carrito.forEach(prod => {
+      carrito.forEach((prod, index) => {
         const div = document.createElement('div')
         div.classList.add('producto')
         div.innerHTML = `
@@ -73,8 +73,27 @@
         totalCompra += prod.precio
       })
 
-      total.innerHTML = `<strong style="font-size: 2.4rem;">Total: $${totalCompra.toFixed(2)}</strong>`
+      total.innerHTML = `
+  <div class="carrito__total">
+    <span>Total:</span>
+    <span>$${totalCompra.toFixed(2)}</span>
+  </div>
+`
 
+
+      // Botón eliminar individual
+      document.querySelectorAll('.producto__eliminar').forEach(boton => {
+        boton.addEventListener('click', () => {
+          const index = parseInt(boton.dataset.index)
+          if (!isNaN(index)) {
+            carrito.splice(index, 1)
+            localStorage.setItem('carrito', JSON.stringify(carrito))
+            location.reload()
+          }
+        })
+      })
+
+      // Vaciar todo el carrito
       btnVaciar.addEventListener('click', () => {
         localStorage.removeItem('carrito')
         location.reload()
