--- a/producto.html
+++ b/producto.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Detalle del Producto</title>
   <link rel="stylesheet" href="normalize.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet" />
 </head>
 <body>
 
   <header class="header">
     <a href="index.html">
-      <img class="header__logo" src="img/logo.png" alt="Logotipo" />
+      <img class="header__logo" src="img/logo.png" alt="Logotipo">
     </a>
   </header>
 
@@ -21,55 +21,60 @@
     <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
     <a class="navegacion__enlace" href="carrito.html">
-        Carrito <span id="contador">(0)</span>
+      Carrito <span id="contador">(0)</span>
     </a>
   </nav>
 
   <main class="contenedor">
-    <h1 id="titulo">Producto</h1>
+    <h1 id="nombre-producto">Producto</h1>
 
-    <div id="detalle" class="producto" style="max-width: 50rem; margin: 0 auto;"></div>
+    <div class="camisa">
+      <img id="imagen-producto" src="" alt="Imagen del producto" class="producto__imagen" />
+
+      <div>
+        <p class="producto__precio" id="precio-producto"></p>
+        <button id="btn-agregar" class="producto__boton">Agregar al carrito</button>
+      </div>
+    </div>
   </main>
 
   <footer class="footer">
-    <p class="footer__texto">Facundo Domínguez © 2025. Todos los derechos reservados.</p>
+    <p class="footer__texto">Dominguez Facundo © 2025. Todos los derechos reservados.</p>
   </footer>
 
+  <script src="carrito.js"></script>
   <script>
-    const params = new URLSearchParams(window.location.search)
+    document.addEventListener('DOMContentLoaded', () => {
+      const params = new URLSearchParams(window.location.search)
+      const nombre = params.get('nombre')
+      const precio = parseFloat(params.get('precio'))
+      const imagen = params.get('imagen')
 
-    const nombre = params.get('nombre')
-    const precio = params.get('precio')
-    const imagen = params.get('imagen')
+      const nombreEl = document.getElementById('nombre-producto')
+      const precioEl = document.getElementById('precio-producto')
+      const imagenEl = document.getElementById('imagen-producto')
+      const btnAgregar = document.getElementById('btn-agregar')
 
-    document.getElementById('titulo').textContent = nombre
+      if (!nombre || isNaN(precio) || !imagen) {
+        nombreEl.textContent = 'Producto no encontrado'
+        return
+      }
 
-    const div = document.getElementById('detalle')
-    div.innerHTML = `
-      <img class="producto__imagen" src="${imagen}" alt="${nombre}">
-      <div class="producto__informacion">
-        <p class="producto__nombre">${nombre}</p>
-        <p class="producto__precio">$${precio}</p>
-        <button class="producto__boton" data-nombre="${nombre}" data-precio="${precio}">
-          Agregar al carrito
-        </button>
-      </div>
-    `
+      nombreEl.textContent = nombre
+      precioEl.textContent = `$${precio}`
+      imagenEl.src = imagen
+      imagenEl.alt = `Imagen de ${nombre}`
 
-    const boton = div.querySelector('.producto__boton')
-    boton.addEventListener('click', () => {
-      const producto = { nombre, precio: parseFloat(precio) }
-
-      const carrito = JSON.parse(localStorage.getItem('carrito')) || []
-      carrito.push(producto)
-      localStorage.setItem('carrito', JSON.stringify(carrito))
-
-      alert(`${nombre} fue agregado al carrito.`)
+      btnAgregar.addEventListener('click', () => {
+        const producto = { nombre, precio, imagen }
+        const carrito = JSON.parse(localStorage.getItem('carrito')) || []
+        carrito.push(producto)
+        localStorage.setItem('carrito', JSON.stringify(carrito))
+        alert(`${nombre} fue agregado al carrito.`)
+        location.href = 'carrito.html'
+      })
     })
   </script>
-
-  <script src="carrito.js"></script>
-
 
 </body>
 </html>
