--- a/carrito.html
+++ b/carrito.html
@@ -21,7 +21,7 @@
     <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     <a class="navegacion__enlace" href="contacto.html">Contacto</a>
     <a class="navegacion__enlace navegacion__enlace--activo" href="carrito.html">
-      Carrito <span id="contador">(0)</span>
+      Carrito <span id="contador">(0)</span> 
     </a>
   </nav>
 
@@ -42,6 +42,7 @@
   </footer>
 
   <script src="carrito.js"></script>
+  <!--Script que Muestra el carrito, eventos y boton eliminar-->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const lista = document.getElementById('carrito-lista')
